# robotology-community-667

./: .gitignore  CMakeLists.txt  README.md  joints.txt
src/: main.cpp
